--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,9 @@
   --font-main: Roboto, sans-serif;
   --font-decor: Raleway, Segoe UI, sans-serif;
   --border-gray: rgba(236, 236, 236, 1);
-  --line-gray: #afb1b8;
+  --card-gap: 30px;
+  --shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 /* Fonts Palet*/
@@ -52,6 +54,14 @@ body {
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
+img {
+  display: block;
+  max-width: 100%;
+}
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 .section {
   padding: 94px 0px;
 }
@@ -83,6 +93,17 @@ body {
   margin: -1px;
 }
 
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--card-gap));
+  margin-left: calc(-1 * var(--card-gap));
+}
+.card-item {
+  margin-top: var(--card-gap);
+  margin-left: var(--card-gap);
+}
+
 /* --------------------------------------------------------------------------------------------------------------------- */
 /* Page Index */
 /* header */
@@ -108,16 +129,15 @@ body {
   letter-spacing: 0.03em;
   color: var(--accent);
 }
+.header .logo {
+  margin-right: 93px;
+}
 .logo-black {
   color: var(--text-black);
 }
 .logo:hover .logo-black,
 .logo:focus .logo-black {
   color: var(--accent);
-}
-
-.nav {
-  margin-left: 93px;
 }
 
 .nav-list {
@@ -151,66 +171,23 @@ body {
   margin-left: auto;
 }
 .auth-list .auth-item + .auth-item {
-  margin-left: 30px;
+  margin-left: 50px;
 }
 /* .auth-item {
 } */
-/* .auth-item::before {
-  content: '';
-  display: inline-block;
-  width: 16px;
-  height: 12px;
-  outline: 1px solid red;
-  background-size: contain;
-  /* background-repeat: no-repeat; */
-/* background-image: url(../images/Backgrounds/mail.svg); */
-
-.auth-item.icon-mail::before {
-  content: '';
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  /* outline: 1px solid red; */
-  background-image: url(../images/Backgrounds/mail.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: bottom;
-  background-position: right;
-  margin-right: 5px;
-}
-.auth-item.icon-phone::before {
-  content: '';
-  display: inline-block;
-  width: 10px;
-  height: 16px;
-  background-image: url(../images/Backgrounds/smartphone.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-right: 7px;
-  /* outline: 1px solid red; */
-}
-
 .auth-item:hover,
 .auth-item:focus {
   color: var(--accent);
 }
 
-.hero.section {
-  max-width: 1600px;
-  height: 600px;
-  /* outline: 1px solid red; */
-  margin-left: auto;
-  margin-right: auto;
+/* main________________________________________________ */
 
-  background-position: center;
-  background-repeat: no-repeat;
+.hero.section {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/Backgrounds/header-background.jpg);
 }
 .hero {
-  /* background-color: var(--background-dark-gray); */
+  background-color: var(--background-dark-gray);
   text-align: center;
 }
 .hero-title {
@@ -249,7 +226,7 @@ body {
   background-color: var(--accent-hover);
 }
 
-/* specifics */
+/* specifics________________________________________________ */
 
 .specifics {
   padding-bottom: 0px;
@@ -262,195 +239,59 @@ body {
   line-height: 1.1;
   text-transform: uppercase;
 }
-.specifics-list {
-  display: flex;
-}
-
 .specifics-item {
-  width: 270px;
+  flex-basis: calc(100% / 4 - var(--card-gap));
 }
-.specifics-item::before {
-  content: '';
-  display: block;
-  height: 120px;
-  /* outline: 1px solid rebeccapurple; */
-  background-color: var(--background-light-gray);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-bottom: 30px;
-}
-.icon-antena::before {
-  background-image: url(../images/Backgrounds/antenna\ 1.svg);
-  background-size: 70px;
-}
-.icon-clock::before {
-  background-image: url(../images/Backgrounds/clock\ 1.svg);
-  background-size: 70px;
-}
-.icon-diagram::before {
-  background-image: url(../images/Backgrounds/diagram\ 1.svg);
-  background-size: 70px;
-}
-.icon-astronaut::before {
-  background-image: url(../images/Backgrounds/astronaut\ 1.svg);
-  background-size: 70px;
-}
-.specifics-list .specifics-item:not(:last-child) {
-  margin-right: 30px;
-}
-.specifics-list p {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-/* preview */
-
-/* .preview {
-} */
 .section-title {
+  padding-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
 }
 .preview-list {
-  display: flex;
+  flex-basis: calc(100% / 3 - var(--card-gap));
 }
-.preview-list > .item {
-  height: 294px;
-}
-.preview-list > .item:not(:last-child) {
-  margin-right: 30px;
-}
+/* .preview-list > .item {
 
-/* team */
+} */
+
+/* team __________________________________________*/
 .team {
   background-color: var(--background-light-gray);
 }
 /* .team-title {
 } */
-.team-list {
-  display: flex;
-}
+/* .team-list {
+
+} */
 .team-list > .item {
   display: block;
   background-color: var(--background-white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  /* border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px; */
+  box-shadow: var(--shadow);
   border-radius: 0px 0px 4px 4px;
+  width: calc(100% / 4 - var(--card-gap));
 }
-.team-list > .item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .team-list .photo {
-  display: block;
+  margin-bottom: 20px;
+}
+.team-worker {
+  margin-bottom: 10px;
 }
 .team-worker,
 .team-description {
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.1875;
   text-align: center;
 }
-/* .team-worker {
-  margin-bottom: 10px;
-} */
-.worker-info {
-  padding: 30px 32px;
-}
-.team-description {
-  margin-top: 0px;
-  margin-bottom: 14px;
-}
-.social-list {
-  display: flex;
-}
-.social-item::before {
-  display: inline-block;
-  content: '';
-  /* outline: 1px solid lawngreen; */
-  background-color: var(--background-light-gray);
-  width: 44px;
-  height: 44px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
-}
-.social-item.instagram::before {
-  background-image: url(../images/Backgrounds/card-social-instagram.svg);
-  background-size: 20px 20px;
-}
-.social-item.twitter::before {
-  background-image: url(../images/Backgrounds/card-social-twitter.svg);
-  background-size: 20px 20px;
-}
-.social-item.facebook::before {
-  background-image: url(../images/Backgrounds/card-social-facebook.svg);
-  background-size: 20px 20px;
-}
-.social-item.linkedin::before {
-  background-image: url(../images/Backgrounds/card-social-linkedin.svg);
-  background-size: 20px 20px;
-}
-/* .clients {
-  padding: 94px 0px;
-} */
 
-.clients-title {
-  color: var(--text-dark-gray);
+.team-list .card-text {
+  padding: 30px;
 }
 
-.clients-list {
-}
-.list {
-  display: flex;
-  justify-content: space-between;
-}
-/* .item {
-} */
-
-.clients-item::before {
-  content: '';
-  width: 170px;
-  height: 92px;
-  display: inline-block;
-  outline: 1px solid var(--line-gray);
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.company-1::before {
-  background-image: url(../images/Backgrounds/company-1.svg);
-  background-size: 160px 60px;
-}
-.company-2::before {
-  background-image: url(../images/Backgrounds/company-2.svg);
-  background-size: 160px 60px;
-  background-position: center;
-}
-.company-3::before {
-  background-image: url(../images/Backgrounds/company-3.svg);
-  background-size: 160px 60px;
-  background-position: center;
-}
-.company-4::before {
-  background-image: url(../images/Backgrounds/company-4.svg);
-  background-size: 160px 60px;
-  background-position: center;
-}
-.company-5::before {
-  background-image: url(../images/Backgrounds/company-5.svg);
-  background-size: 160px 60px;
-  background-position: center;
-}
-.company-6::before {
-  background-image: url(../images/Backgrounds/company-6.svg);
-  background-size: 160px 60px;
-  background-position: center;
-}
 /* footer */
 .footer {
   padding-top: 60px;
@@ -459,7 +300,7 @@ body {
 }
 .footer-logo {
   display: block;
-  margin-bottom: 23px;
+  margin-bottom: 20px;
 }
 .logo-white {
   color: var(--text-white);
@@ -490,8 +331,7 @@ body {
 .address-link > .item:not(:last-child) {
 }
 
-/* -------------------------------------------------------------------------------------------------------------------- */
-/* Page Portfolio */
+/* _____Page Portfolio______________________________________________________________ */
 /* .portfolio {
 } */
 /* filter */
@@ -531,27 +371,18 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-/* Portfolio */
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.portfolio-item {
-  width: 370px;
-  /* background-color: var(--background-light-gray); */
 
-  margin-right: 30px;
-  margin-bottom: 30px;
+/* Portfolio------------------------------------------- */
+/* .portfolio-list {
+} */
+.portfolio-item {
+  background-color: var(--background-white);
+  width: calc(100% / 3 - var(--card-gap));
 }
-.portfolio-item:nth-child(3n) {
-  margin-right: 0px;
-}
-.portfolio-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
+
 .portfolio-item p {
   font-size: 16px;
+  line-height: 1.875;
   margin-bottom: 0px;
   margin-top: 0px;
 }
@@ -563,10 +394,8 @@ body {
   color: var(--text-dark-gray);
   margin-bottom: 4px;
 }
-.portfolio-link > img {
-  display: block;
-}
-.card-text {
+
+.portfolio-list .card-text {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
