--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,9 @@
   --card-gap: 30px;
   --shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  --card-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* Fonts Palet*/
@@ -511,6 +514,9 @@ p {
 .portfolio-item {
   background-color: var(--background-white);
   width: calc(100% / 3 - var(--card-gap));
+}
+.portfolio-item:hover {
+  box-shadow: var(--card-shadow);
 }
 
 .portfolio-item p {
