--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,6 @@ p {
 .hero {
   /* background-color: var(--background-dark-gray); */
   text-align: center;
-  height: 600px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -282,7 +281,6 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
   height: 120px;
   background-color: var(--background-light-gray);
   margin-bottom: 30px;
@@ -363,29 +361,30 @@ p {
 .company-list {
   display: flex;
 }
+
 .company-item {
+  flex-basis: calc(100% / 6 - var(--card-gap));
+}
+
+.company-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 92px;
   border: 1px solid var(--icon-gray);
   border-radius: 4px;
-}
-.company-item > a {
-  height: 60px;
 }
 .company-icon {
   width: 106px;
   height: 60px;
   fill: var(--icon-gray);
 }
-.company-item:hover,
-.company-item:focus {
+.company-link:hover,
+.company-link:focus {
   border: 1px solid var(--accent);
 }
-.company-item:hover .company-icon,
-.company-item:focus .company-icon {
+.company-link:hover .company-icon,
+.company-link:focus .company-icon {
   fill: var(--accent);
 }
 
@@ -398,9 +397,13 @@ p {
   /* background-color: teal; */
   margin-right: 70px;
 }
-.social-column {
-  /* background-color: teal; */
-  width: 206px;
+
+.footer .social-list {
+  margin-left: 10px;
+}
+
+.footer .item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .footer .circle {
@@ -500,15 +503,19 @@ p {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* Portfolio------------------------------------------- */
+/* Portfolio__________________________________________ */
 /* .portfolio-list {
 } */
 .portfolio-item {
   background-color: var(--background-white);
   width: calc(100% / 3 - var(--card-gap));
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link {
+  display: flex;
+  flex-direction: column;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: var(--card-shadow);
 }
 
