--- a/css/styles.css
+++ b/css/styles.css
@@ -324,7 +324,10 @@ p {
   margin-bottom: 16px;
 }
 .team-list .card-text {
-  padding: 30px;
+  padding: 30px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* .social {
@@ -334,15 +337,19 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
-  /* background-color: teal; */
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
 }
+
 .social-list {
   display: flex;
-  justify-content: space-between;
 }
+
+.social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .circle:hover,
 .circle:focus {
   background-color: var(--accent);
@@ -395,11 +402,7 @@ p {
 }
 .adress-column {
   /* background-color: teal; */
-  margin-right: 70px;
-}
-
-.footer .social-list {
-  margin-left: 10px;
+  margin-right: 75px;
 }
 
 .footer .item:not(:last-child) {
@@ -413,6 +416,9 @@ p {
 .footer .circle:hover,
 .footer .circle:focus {
   background-color: var(--accent);
+}
+.footer .social-icon {
+  fill: var(--background-white);
 }
 .social-column .title {
   color: var(--text-white);
